SERVER-19374 Fix TTL Monitor does not yield when deleting expired docs